--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-  --color-primary: #f8ce14; 
+  --color-primary: hsl(46, 94%, 51%); 
   --color-primary-light: #483c2d;
   --color-secondary: #685b4a;
   --color-accent: #ce9731;
