--- a/css/index.css
+++ b/css/index.css
@@ -200,7 +200,7 @@ main {
 
 /* About Section */
 .about {
-    min-height: 100vh;
+    height: 100vh;
     padding: 7rem 5%;
     background: var(--color-secondary);
     color: var(--color-primary);
