--- a/css/ostoskori.css
+++ b/css/ostoskori.css
@@ -24,17 +24,6 @@
     flex-direction: column;
     gap: 30px;
 }
-.cart-history-btn {
-    background: #ffffff;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px;
-    transition: background 0.2s ease;
-    align-self: flex-start;
-}
 
 /* Cart Items */
 .cart-items {
@@ -132,6 +121,7 @@
 }
 
 .btn-primary {
+    width: 30%;
     background: #000;
     color: white;
     padding: 10px 20px;
